# Rust

./: .gitmodules
auto_gpt/: Cargo.toml  README.md  env.sample
auto_gpt/src/: main.rs
auto_gpt/src/apis/: call_request.rs  mod.rs
auto_gpt/src/helpers/: command_line.rs  general.rs  mod.rs
auto_gpt/src/models/: mod.rs
auto_gpt/src/models/general/: llm.rs
prediction-market/: Cargo.toml  Development.md  Readme.md
prediction-market/artifacts/: checksums.txt  prediction_market-aarch64.wasm
prediction-market/schema/: prediction_market.json
prediction-market/schema/raw/: instantiate.json  query.json  response_to_fetch_price.json
prediction-market/src/: contract.rs  lib.rs  msg.rs  state.rs
