[package]
name = "prediction_market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cosmwasm-schema = "1.5.3"
cosmwasm-std = "1.5.3"
cw-storage-plus = "1.2.0"
pyth-sdk-cw = "1.2.0"
schemars = "0.8.16"
serde = "1.0.196"
